--- a/templates/search.html
+++ b/templates/search.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stock Growth Predictor</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='output.css') }}">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-blue-950">
     <h1 class="text-white text-4xl text-center font-medium mt-48 tracking-wide">Make Better Investment Decisions With <br> Alternative Data</h1>
