--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
             <div class="md:w-1/2 text-center md:text-left">
                 <p class="text-lg bg-blue-500 text-white inline-block py-1 px-2 rounded-lg">Secure and Safe Service</p>
                 <h1 class="text-3xl md:text-5xl font-semibold mt-4">Make Better Investment Decisions</h1>
-                <p class="text-lg mt-4">Offers the best stock predictions software for retail investors. This user-friendly platform generates stock recommendations based on unconventional information such as social analysis, website analytics, job postings, employee sentiment, and financial news mentions.</p>
+                <p class="text-lg mt-4">Offers the best stock predictions software for retail investors. This user-friendly platform generates stock recommendations based on historical stock data.</p>
                 <div class="mt-8">
                     <button onclick="gotosecondpage()" id="getstarted" class="bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600"><i class="fas fa-play"></i> Get Started</button>
                 </div>
