--- a/templates/search.html
+++ b/templates/search.html
@@ -20,6 +20,7 @@
                 <option value="META">META</option>
                 <option value="MICROSOFT">MICROSOFT</option>
                 <option value="TESLA">TESLA</option>
+                <option value="INFOSYS">INFOSYS</option>
             </select>
         </form>
     </div>
@@ -41,6 +42,7 @@
             <option value="META">META</option>
             <option value="MICROSOFT">MICROSOFT</option>
             <option value="TESLA">TESLA</option>
+            <option value="INFOSYS">INFOSYS</option>
         </select>
     </div>
     </div>
